
28. Fix: arrays.shuffle rare constraint error (should be) fixed.

29. Fix: last in chain internal identifier no longer shows a "should be constant" error in test phase mode.

30. Fix: scalar user types no longer incorrectly treated as subtypes during syntax check.

31. New: abstract enforced for un-applied types in design and test modes.

32. Change: all id numbers (e.g. files, lists, canvases)  are now limited types.

33. New: pragma assumption applied and factor, for abstract and limited type tests.

34. New: trailing underscores not allowed in identifiers.

35. Fix: records.to_record now marks the record as written, elimintating the
"expected a constant" error message.

36. Fix: "expected a constant" check not applied to record fields.

37. Fix: case..when now handles shell commands correctly.

38. Fix: json enumerateds how handled correctly in case...when.

39. Change: scripts that end in ".sh" (traditionally a shell script) now do not run...an error is reported.

40. Fix: records.to_json no longer raises an exception on an undefined boolean field.

41. New: pragma test has an optional test description.

42. New: pragma test_report to specify a test report type and filename.

43. New: test failures no longer abort immediately but produce a report after the program finishes.

44. Fix: assigning in a record declaration now works with types containing a period (e.g. teams.member ).

45. Fix: btree_io and hash_io cursors now closed at end-of-block to prevent indefinite row locking on a control-c exit.

46. Fix: text_io package workaround for Ada.Text_IO not handling interrupted system calls on Put/Put_Line.

47. Fix: arrays.to_array and records.to_record handle JSON conversion exceptions properly.

48. Fix: records.to_record fixed so "?" will display the name, not ordinal position, of enumerated items.

49. Fix: records.to_record memory leak fixed.
